fix: navbar z-index

--- a/src/components/Navbar.module.sass
+++ b/src/components/Navbar.module.sass
@@ -8,6 +8,7 @@
     background-color: tokens.$primary700
     height: 9rem
     justify-items: center
+    z-index: 3
 
 .modalIsOpen
     position: fixed
@@ -18,6 +19,7 @@
     width: 500%
     transform: translateX(-1%)
     margin-bottom: -2rem
+    z-index: 4
 
 .navbarBody
     grid-column: 1/5
@@ -147,7 +149,6 @@
         column-gap: 2.4rem
         padding: 0 4.8rem
         height: 9rem
-        z-index: 2
 
     .navbarWave
         width: 100%
